fix: adjust dropdown menu position for better alignment

--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -77,8 +77,8 @@ span {
 
 .dropdown-menu {
   position: absolute;
-  top: calc(100% + 4px);
-  right: -8px;
+  top: calc(133% + 3px);
+  right: -24px;
   background-color: #2a3647;
   border-radius: 20px 0px 20px 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
